Replace com.sun.net.HttpsServer with own HttpsServer based on ServerSocket