@@ -14,7 +14,7 @@ apply plugin: "java"
 
 mainClassName = "com.bullbytes.mayray.Start"
 
-sourceCompatibility = 11
+sourceCompatibility = 12
 
 // Define JVM options and system properties
 // Here's more on defining options: https://docs.oracle.com/javase/8/docs/technotes/tools/unix/java.html
@@ -23,11 +23,19 @@ applicationDefaultJvmArgs +=
                 // Set the maximum Java heap size. Note that not all of that space is necessarily available to our
                 // application's objects. The VM, especially the garbage collector, might use some of it, too.
                 // See: http://hg.openjdk.java.net/jdk9/jdk9/hotspot/file/6dc8db7164d2/src/share/vm/gc_interface/collectedHeap.hpp#l234
-                "-Xmx2g",
+                "-Xmx2g"
                 // Workaround for infinite loop caused by JDK bug implementing TLS:
                 // https://stackoverflow.com/questions/56708300/httpsserver-causes-100-cpu-load-with-curl
-                "-Djdk.tls.acknowledgeCloseNotify=true"
+                //, "-Djdk.tls.acknowledgeCloseNotify=true"
+
+                // If we add this flag also to the compiler arguments, we can use JDK preview features like switch expressions
+                , "--enable-preview"
         ]
+
+// If we add this flag also to the run time arguments, we can use JDK preview features like switch expressions
+tasks.withType(JavaCompile).each {
+    it.options.compilerArgs.add('--enable-preview')
+}
 
 
 repositories {
